syntax = "proto3";

package system.permission.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "openapi/v3/annotations.proto";

option go_package = "quest-admin/api/permission/v1;v1";


option (openapi.v3.document) = {
  tags: [
    {
      name: "RoleService";
      description: "角色管理相关操作";
    }
  ];
};

service RoleService {
  // 创建角色
  rpc CreateRole (CreateRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/permissions/roles"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "创建角色";
      description: "创建一个新的角色";
    };
  }

  // 获取角色信息
  rpc GetRole (GetRoleRequest) returns (GetRoleReply) {
    option (google.api.http) = {
      get: "/api/v1/permissions/roles/{id}"
    };
    option (openapi.v3.operation) = {
      summary: "获取角色详细信息";
      description: "根据角色ID获取角色的详细信息";
    };
  }

  // 获取角色列表
  rpc ListRoles (ListRolesRequest) returns (ListRolesReply) {
    option (google.api.http) = {
      post: "/api/v1/permissions/roles/list"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "获取角色列表";
      description: "分页查询角色列表";
    };
  }

  // 更新角色信息
  rpc UpdateRole (UpdateRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/permissions/roles/{id}"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "更新角色信息";
      description: "更新角色的基本信息";
    };
  }

  // 删除角色
  rpc DeleteRole (DeleteRoleRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/permissions/roles/{id}"
    };
    option (openapi.v3.operation) = {
      summary: "删除角色";
      description: "删除角色，此操作不可逆";
    };
  }

  // 分配角色菜单权限
  rpc AssignRoleMenus (AssignRoleMenusRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/v1/permissions/roles/{id}/menus"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "分配角色菜单权限";
      description: "为角色分配菜单权限";
    };
  }

  // 获取角色菜单权限
  rpc GetRoleMenus (GetRoleMenusRequest) returns (GetRoleMenusReply) {
    option (google.api.http) = {
      get: "/api/v1/permissions/roles/{id}/menus"
    };
    option (openapi.v3.operation) = {
      summary: "获取角色菜单权限";
      description: "获取角色已分配的菜单权限列表";
    };
  }
}

message RoleInfo {
  option (openapi.v3.schema) = {
    description: "角色的基本信息";
  };
  string id = 1 [(openapi.v3.property) = {description: "角色唯一标识符"; example: {yaml: "123456789"};}];
  string name = 2 [(openapi.v3.property) = {description: "角色名称"; example: {yaml: "管理员"};}];
  string code = 3 [(openapi.v3.property) = {description: "角色权限字符串"; example: {yaml: "admin"};}];
  int32 sort = 4 [(openapi.v3.property) = {description: "显示顺序"; example: {yaml: "1"};}];
  int32 data_scope = 5 [(openapi.v3.property) = {description: "数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）"; example: {yaml: "1"};}];
  string data_scope_dept_ids = 6 [(openapi.v3.property) = {description: "数据范围(指定部门数组)";}];
  int32 status = 7 [(openapi.v3.property) = {description: "角色状态: 0-禁用, 1-正常"; example: {yaml: "1"};}];
  int32 type = 8 [(openapi.v3.property) = {description: "角色类型"; example: {yaml: "1"};}];
  string remark = 9 [(openapi.v3.property) = {description: "备注信息";}];
  google.protobuf.Timestamp create_at = 10 [(openapi.v3.property) = {description: "创建时间";}];
  google.protobuf.Timestamp update_at = 11 [(openapi.v3.property) = {description: "更新时间";}];
  string tenant_id = 12 [(openapi.v3.property) = {description: "租户ID";}];
}

message CreateRoleRequest {
  option (openapi.v3.schema) = {
    description: "创建角色请求体";
  };
  optional string name = 1 [(openapi.v3.property) = {description: "角色名称"; example: {yaml: "管理员"};}];
  optional string code = 2 [(openapi.v3.property) = {description: "角色权限字符串"; example: {yaml: "admin"};}];
  optional int32 sort = 3 [(openapi.v3.property) = {description: "显示顺序"; example: {yaml: "1"};}];
  optional int32 data_scope = 4 [(openapi.v3.property) = {description: "数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）"; example: {yaml: "1"};}];
  optional string data_scope_dept_ids = 5 [(openapi.v3.property) = {description: "数据范围(指定部门数组)";}];
  optional int32 status = 6 [(openapi.v3.property) = {description: "角色状态: 0-禁用, 1-正常"; example: {yaml: "1"};}];
  optional int32 type = 7 [(openapi.v3.property) = {description: "角色类型"; example: {yaml: "1"};}];
  optional string remark = 8 [(openapi.v3.property) = {description: "备注信息";}];
}

message GetRoleRequest {
  option (openapi.v3.schema) = {
    description: "获取角色信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "角色ID"; example: {yaml: "123456789"};}];
}

message GetRoleReply {
  option (openapi.v3.schema) = {
    description: "获取角色信息响应体";
  };
  RoleInfo role = 1 [(openapi.v3.property) = {description: "角色详细信息";}];
}

message ListRolesRequest {
  option (openapi.v3.schema) = {
    description: "查询角色列表请求体";
  };
  optional int32 page = 1 [(openapi.v3.property) = {description: "页码，从1开始"; example: {yaml: "1"};}];
  optional int32 page_size = 2 [(openapi.v3.property) = {description: "每页数量，默认10"; example: {yaml: "10"};}];
  optional string keyword = 3 [(openapi.v3.property) = {description: "搜索关键字"; example: {yaml: "管理"};}];
  optional int32 status = 4 [(openapi.v3.property) = {description: "角色状态筛选: 0-禁用, 1-正常"; example: {yaml: "1"};}];
  optional string sort_field = 5 [(openapi.v3.property) = {description: "排序字段"; example: {yaml: "sort"};}];
  optional string sort_order = 6 [(openapi.v3.property) = {description: "排序方式: asc, desc"; example: {yaml: "asc"};}];
}

message ListRolesReply {
  option (openapi.v3.schema) = {
    description: "查询角色列表响应体";
  };
  repeated RoleInfo roles = 1 [(openapi.v3.property) = {description: "角色列表";}];
  int64 total = 2 [(openapi.v3.property) = {description: "总记录数"; example: {yaml: "100"};}];
  int32 page = 3 [(openapi.v3.property) = {description: "当前页码"; example: {yaml: "1"};}];
  int32 page_size = 4 [(openapi.v3.property) = {description: "每页数量"; example: {yaml: "10"};}];
  int32 total_pages = 5 [(openapi.v3.property) = {description: "总页数"; example: {yaml: "10"};}];
}

message UpdateRoleRequest {
  option (openapi.v3.schema) = {
    description: "更新角色信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "角色ID"; example: {yaml: "123456789"};}];
  optional string name = 2 [(openapi.v3.property) = {description: "角色名称"; example: {yaml: "管理员"};}];
  optional string code = 3 [(openapi.v3.property) = {description: "角色权限字符串"; example: {yaml: "admin"};}];
  optional int32 sort = 4 [(openapi.v3.property) = {description: "显示顺序"; example: {yaml: "1"};}];
  optional int32 data_scope = 5 [(openapi.v3.property) = {description: "数据范围（1：全部数据权限 2：自定数据权限 3：本部门数据权限 4：本部门及以下数据权限）"; example: {yaml: "1"};}];
  optional string data_scope_dept_ids = 6 [(openapi.v3.property) = {description: "数据范围(指定部门数组)";}];
  optional int32 status = 7 [(openapi.v3.property) = {description: "角色状态: 0-禁用, 1-正常"; example: {yaml: "1"};}];
  optional int32 type = 8 [(openapi.v3.property) = {description: "角色类型"; example: {yaml: "1"};}];
  optional string remark = 9 [(openapi.v3.property) = {description: "备注信息";}];
}

message DeleteRoleRequest {
  option (openapi.v3.schema) = {
    description: "删除角色请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "角色ID"; example: {yaml: "123456789"};}];
}

message AssignRoleMenusRequest {
  option (openapi.v3.schema) = {
    description: "分配角色菜单权限请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "角色ID"; example: {yaml: "123456789"};}];
  repeated string menu_ids = 2 [(openapi.v3.property) = {description: "菜单ID列表";}];
}

message GetRoleMenusRequest {
  option (openapi.v3.schema) = {
    description: "获取角色菜单权限请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "角色ID"; example: {yaml: "123456789"};}];
}

message GetRoleMenusReply {
  option (openapi.v3.schema) = {
    description: "获取角色菜单权限响应体";
  };
  repeated string menu_ids = 1 [(openapi.v3.property) = {description: "菜单ID列表";}];
}
